--- a/Index.html
+++ b/Index.html
@@ -17,7 +17,7 @@
         <a href="Boat.html"><img src="images/boat.jpg" height="150"./></a>
         <a href="cablecar.html"><img src="images/cablecar.jpg" height="150"./></a>
         <a href="images/city.jpg"><img src="images/city.jpg" height="150"./></a>
-        <a href="plane.html"><img src="images/plane.jpg" height="150"./></a>a>
+        <a href="plane.html"><img src="images/plane.jpg" height="150"./></a>
         <a href="www.google.com"> Click here to go to Google</a>
         <a href="www.itvarsity.org"> Click here to go to ITVarsity</a>
         <a href="About.html"> About Us</a>
